--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "@typegoose/typegoose": "^6.0.4",
     "@types/mongoose": "^5.5.22",
     "mongoose": "^5.7.5",
+    "multer-aliyun-oss": "^1.0.2",
     "nestjs-mongoose-crud": "^1.1.2",
     "nestjs-typegoose": "^7.0.0",
     "reflect-metadata": "^0.1.13",
